Log In done => * App.js -> Added a private route, protecting the '/project' route when there is no user authenticated * SignIn.js -> states added from alertContext and authContext to redirect to '/projects' when the user logs in, and show alerts if there are errors. The function 'userLogin()' was added, which validate via our API all the fields, setting the token in localStorage and  getting the current authenticated user * Nav.js -> useEffect, the first time the component charge, gets the authenticated user, a ternary operator evaluates whether to show the user name or not * Project.js -> gets the authenticated user when the component charge for first time and if the user is not authorized the component return null * the useEffect allows to mantain the session even when the page is reload, because when the component is charged the user data must be added to the state reducerAuth.js -> loading state was added in order to avoid the behavior when we try to enter in the privateRoute, auth is set to true when log or get_user happens stateAuth.js -> userLogin and signOut was added to log in and log out the user index.css -> classes added

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --blanco: #ffffff;
   --gris1: #edf2f6;
+  --gris1-2: #ced1d4;
   --gris2: #2f3848;
   --gris2-1: #475263;
   --gris3: #1a202d;
@@ -104,6 +105,16 @@ a {
 }
 .btn-eliminate:hover{
   background-color: var(--azul2);
+}
+
+.sign-out {
+  color: var(--blanco);
+}
+
+.sign-out:hover {
+  text-shadow: #2a323f 3px 2px 5px;
+  color: var(--gris1-2);
+  transition: all .3s ease;
 }
 
 @media (min-width: 768px) {
